some work (will probably undo this commit later)

--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -79,8 +79,7 @@ library
                         src/Internal/C/vector-aux.c
 
 
-    extensions:         ForeignFunctionInterface,
-                        CPP
+    extensions:         ForeignFunctionInterface
 
     ghc-options:        -Wall
                         -fno-warn-missing-signatures
