--- a/packages/tests/hmatrix-tests.cabal
+++ b/packages/tests/hmatrix-tests.cabal
@@ -29,6 +29,7 @@ library
     Build-Depends:      base >= 4 && < 5, deepseq,
                         QuickCheck >= 2, HUnit, random,
                         hmatrix >= 0.18
+                      , binary
     if flag(gsl)
       Build-Depends:    hmatrix-gsl >= 0.18
 
