--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -83,7 +83,7 @@ library
     ghc-options:        -Wall
                         -fno-warn-missing-signatures
                         -fno-warn-orphans
-                        -fprof-auto
+                        -fno-prof-auto
 
     cc-options:         -O4 -Wall
 
