--- a/packages/base/stack.yaml
+++ b/packages/base/stack.yaml
@@ -1,10 +1,9 @@
 resolver: lts-7.8
 
-flags:
-  hmatrix:
-    openblas: false
-
 packages:
 - '.'
 
 extra-deps: []
+
+nix:
+  shell-file: shell.nix
