Workaround for GHC-8.4.x
* Adds missing Semigroup instances
* Adds `semigroups` to the deps of `hmatrix`
* Hides conflicting names from import list with base >= 4.11
    * `(Prelude.<>)` and `GHC.TypeNats.Mod`

--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -46,6 +46,7 @@ library
                         split,
                         bytestring,
                         storable-complex,
+                        semigroups,
                         vector >= 0.8
 
     hs-source-dirs:     src
