--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,10 @@ jobs:
       - restore_cache:
           key: stack-deps-{{ checksum "stack.yaml" }}
       - run:
-          name: Install stack
-          command: nix-env -f https://github.com/nixos/nixpkgs/archive/54ade273e7a677ec35e501174d86d253d9d8dede.tar.gz -i stack
+          name: Install Stack
+          command: |
+            apk update --no-progress && apk --no-progress add ca-certificates bash
+            nix-env -f nixpkgs.nix -iA stack
       - run:
           name: Setup build toolchain
           command: stack --nix setup
