--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,31 +2,27 @@ version: 2
 jobs:
   build:
     docker:
-      - image: nixorg/nix:circleci
+      - image: terrorjack/vanilla:haskell
     steps:
       - checkout
       - restore_cache:
           key: stack-deps-{{ checksum "stack.yaml" }}
       - run:
-          name: Install Stack
-          command: |
-            nix-env -f nixpkgs.nix -iA stack
-      - run:
           name: Setup build toolchain
-          command: stack --nix setup
+          command: stack setup
       - run:
           name: Building dependencies
-          command: stack --nix test --only-snapshot --prefetch
+          command: stack test --only-snapshot --prefetch
       - save_cache:
           paths:
             - "~/.stack"
           key: stack-deps-{{ checksum "stack.yaml" }}
       - run:
           name: Building
-          command: stack --nix build --pedantic
+          command: stack build --pedantic
       - run:
           name: Building tests
-          command: stack --nix test --pedantic --no-run-tests
+          command: stack test --pedantic --no-run-tests
       - run:
           name: Running tests
-          command: stack --nix test
+          command: stack test
