--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
       - restore_cache:
           key: stack-deps-{{ checksum "stack.yaml" }}
       - run:
+          name: Update packages
+          command: nix-channel --update
+      - run:
           name: Setup build toolchain
           command: stack setup
       - run:
