--- a/stack.yaml
+++ b/stack.yaml
@@ -18,6 +18,6 @@ extra-deps:
 - diagrams-rasterific-1.4
 - plots-0.1.0.2
 resolver: lts-10.9
-# nix:
-#   path: [nixpkgs=./nixpkgs.nix]
-#   shell-file: shell.nix
+nix:
+  path: [nixpkgs=./nixpkgs.nix]
+  shell-file: shell.nix
