--- a/stack.yaml
+++ b/stack.yaml
@@ -14,6 +14,7 @@ packages:
 - packages/glpk/
 - packages/base/
 - packages/sundials/
+- examples/
 extra-deps:
 - diagrams-rasterific-1.4
 - plots-0.1.0.2
