--- a/examples/examples.cabal
+++ b/examples/examples.cabal
@@ -19,3 +19,11 @@ executable sundials
                        hmatrix-sundials,
                        hmatrix-gsl
   default-language:    Haskell2010
+
+executable butcherTableau
+  main-is:             ButcherTableau.hs
+  build-depends:       base >=4.10 && <4.11,
+                       hmatrix,
+                       hmatrix-sundials,
+                       pretty
+  default-language:    Haskell2010
