--- a/packages/gsl/hmatrix-gsl.cabal
+++ b/packages/gsl/hmatrix-gsl.cabal
@@ -1,21 +1,18 @@
 Name:               hmatrix-gsl
 Version:            0.19.0.0
-License:            GPL
-License-file:       LICENSE
-Author:             Alberto Ruiz
-Maintainer:         Alberto Ruiz <aruiz@um.es>
-Stability:          provisional
-Homepage:           https://github.com/albertoruiz/hmatrix
 Synopsis:           Numerical computation
 Description:        Purely functional interface to selected numerical computations,
                     internally implemented using GSL.
-
+Homepage:           https://github.com/albertoruiz/hmatrix
+license:            GPL-3
+license-file:       LICENSE
+Author:             Alberto Ruiz
+Maintainer:         Alberto Ruiz <aruiz@um.es>
+Stability:          provisional
 Category:           Math
-tested-with:        GHC ==7.8
-
-cabal-version:      >=1.8
-
 build-type:         Simple
+cabal-version:      >=1.18
+
 
 extra-source-files: src/Numeric/GSL/gsl-ode.c
 
@@ -32,9 +29,6 @@ library
 
     Build-Depends:      base<5, hmatrix>=0.18, array, vector,
                         process, random
-
-
-    Extensions:         ForeignFunctionInterface
 
     hs-source-dirs:     src
     Exposed-modules:    Numeric.GSL.Differentiation,
@@ -97,6 +91,8 @@ library
       extra-libraries: gsl
     else
       pkgconfig-depends: gsl
+
+    default-language:    Haskell2010
 
 
 source-repository head
