Build faster version of CSR builder, using a streaming mutable vector builder.

--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -50,6 +50,7 @@ library
                         random,
                         split,
                         bytestring,
+                        primitive,
                         storable-complex,
                         semigroups,
                         vector >= 0.11
