Make repository's packages build on Windows 10
The changes proposed in this pull request allow the respository's packages to be built on Windows 10 version 2004, with:

`stack --resolver nightly-2020-07-24 build --flag hmatrix:openblas`

See the discussion, including about the use of MSYS2 packages and import libraries, at: https://github.com/haskell-numerics/hmatrix/issues/236

The `.gitignore` file is also updated to exclude `.stack-work`.

--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -140,7 +140,7 @@ library
 
     if os(windows)
         if flag(openblas)
-            extra-libraries:    libopenblas, libgcc_s_seh-1, libgfortran, libquadmath-0
+            extra-libraries:    openblas
         else
             extra-libraries:    blas lapack
 
@@ -159,4 +159,3 @@ library
 source-repository head
     type:     git
     location: https://github.com/albertoruiz/hmatrix
-
