--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,10 @@
-version: 2
+version: 3
 jobs:
   build:
     docker:
-      - image: terrorjack/vanilla:haskell
+      - image: nixos/nix
     steps:
       - checkout
-      - restore_cache:
-          key: stack-deps-eek-{{ checksum "stack.yaml" }}
       - run:
-          name: Update packages
-          command: nix-channel --update
-      - run:
-          name: Building dependencies
-          command: |
-            nix-env -f nixpkgs.nix -iA stack
-            stack --nix --no-terminal --nix build --only-snapshot --prefetch --no-haddock --test --bench --jobs=1
-      - save_cache:
-          paths:
-            - "~/.stack"
-          key: stack-deps-eek-{{ checksum "stack.yaml" }}
-      - run:
-          name: Building
-          command: |
-            stack --nix --no-terminal --nix build --pedantic
-      - run:
-          name: Building tests
-          command: |
-            stack --nix test --pedantic --no-run-tests
-      - run:
-          name: Running tests
-          command: |
-            stack --nix test
+          name: Build base
+          command: nix-build ./packages/base/release.nix
