Expose internal modules; fixes #359, #235

--- a/packages/base/hmatrix.cabal
+++ b/packages/base/hmatrix.cabal
@@ -64,8 +64,7 @@ library
                         Numeric.LinearAlgebra.Data
                         Numeric.LinearAlgebra.HMatrix
                         Numeric.LinearAlgebra.Static
-
-    other-modules:      Internal.Vector
+                        Internal.Vector
                         Internal.Devel
                         Internal.Vectorized
                         Internal.Matrix
